<resources>
    <string name="app_name" translatable="false">Smart Mess Manager</string>
    <string name="mess_manager">Smart Mess Manager</string>
    <string name="members">Members</string>
    <string name="_0">0</string>
    <string name="_house_rent">0</string>
    <string name="house_rent">House Rent</string>
    <string name="taka_sign">৳</string>
    <string name="meals">Meals</string>
    <string name="expenses">Expenses</string>
    <string name="meal_cost">Meal Cost</string>
    <string name="balance_sheet">Balance Sheet</string>
    <string name="title_activity_members">Members Activity</string>
    <string name="member_photo">Member Photo</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="home_address">Home Address</string>
    <string name="add_member">Add Member</string>
    <string name="close">Close</string>
    <string name="national_id">National ID</string>
    <string name="organisation">Organisation</string>
    <string name="occupation">Occupation</string>
    <string name="member_information">Member Information</string>
    <string name="remove_member">Remove Member</string>
    <string name="update">Update</string>
    <string name="add_expense">Add Expense</string>
    <string name="update_expense">Update Expense</string>
    <string name="save">Save</string>
    <string name="amount">Amount</string>
    <string name="description">Description</string>
    <string name="rent_category">Rent Category</string>
    <string name="calendar">Calendar</string>
    <string name="month">Month</string>
    <string name="date">Date</string>
    <string name="remove">Remove</string>
    <string name="expense_info">Expense Information</string>
    <string name="daily_expense">Daily Expense</string>
    <string name="name_required_">Name is required!</string>
    <string name="name_length_error_">Name can\'t be less than 3 characters!</string>
    <string name="special_characters_in_name">Name can\'t contain special characters!</string>
    <string name="phone_number_required_">Phone number is required!</string>
    <string name="phone_length_error_">Phone number length should be 11!</string>

    <string-array name="months">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>

    <string-array name="occupations">
        <item>Student</item>
        <item>Job Holder</item>
        <item>Business</item>
        <item>Unemployed</item>
    </string-array>

    <string-array name="rentCategories">
        <item>House Rent</item>
        <item>Garage Rent</item>
        <item>Electricity Bill</item>
        <item>Gas Bill</item>
        <item>Water Bill</item>
        <item>Garbage Cleaning Bill</item>
        <item>Maid Salary</item>
        <item>Service Charge</item>
        <item>Miscellaneous</item>
        <item>Other</item>
    </string-array>

</resources>
