<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="72dp"
    android:layout_margin="@dimen/margin_very_tiny"
    app:cardCornerRadius="@dimen/radius_small"
    app:cardElevation="@dimen/elevation_medium">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/padding_narrow">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView_logo"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/margin_normal"
            android:elevation="0dp"
            app:cardCornerRadius="24dp">

            <ImageView
                android:id="@+id/imageView_rentLogo"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:contentDescription="@string/house_rent"
                android:src="@drawable/ic_house_rent" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/textView_rentCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/cardView_logo"
            android:fontFamily="@font/arima_madurai_bold"
            android:maxLines="1"
            android:text="@string/rent_category"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/text_medium" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_toStartOf="@+id/layout_amount"
            android:layout_toEndOf="@+id/cardView_logo"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/imageView_calendarLogo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/calendar"
                android:src="@drawable/ic_calendar" />

            <TextView
                android:id="@+id/textView_rentMonth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_very_tiny"
                android:fontFamily="@font/arima_madurai_medium"
                android:maxLines="1"
                android:text="@string/month"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/text_small" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_amount"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/arima_madurai_bold"
                android:text="@string/taka_sign"
                android:textColor="@color/colorMartinique"
                android:textSize="@dimen/text_heading_small" />

            <TextView
                android:id="@+id/textView_rentAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_text"
                android:fontFamily="@font/arima_madurai_bold"
                android:text="@string/amount"
                android:textColor="@color/colorMartinique"
                android:textSize="@dimen/text_heading_small" />

        </LinearLayout>

    </RelativeLayout>

</androidx.cardview.widget.CardView>