<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Dialog.AddMemberDialog">

    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/background_dialog"
        android:layout_centerInParent="true"
        tools:ignore="UselessParent">

        <ImageButton
            android:id="@+id/imageButton_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:background="@null"
            android:layout_marginTop="@dimen/margin_text"
            android:layout_marginEnd="@dimen/margin_text"
            android:contentDescription="@string/close"
            android:src="@drawable/ic_close_red" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageButton_close"
            android:orientation="vertical"
            android:background="@color/colorLight"
            android:padding="@dimen/padding_extra_wide">

            <EditText
                android:id="@+id/editText_name"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edittext_height_regular"
                android:background="@drawable/background_edittext_stroked"
                android:drawableEnd="@drawable/ic_name"
                android:fontFamily="@font/arima_madurai_medium"
                android:hint="@string/name"
                android:importantForAutofill="no"
                android:inputType="text"
                android:maxLength="100"
                android:paddingStart="@dimen/padding_narrow"
                android:paddingEnd="@dimen/padding_narrow" />

            <EditText
                android:id="@+id/editText_phone"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edittext_height_regular"
                android:layout_marginTop="@dimen/margin_normal"
                android:background="@drawable/background_edittext_stroked"
                android:drawableEnd="@drawable/ic_phone"
                android:fontFamily="@font/arima_madurai_medium"
                android:hint="@string/phone"
                android:importantForAutofill="no"
                android:inputType="phone"
                android:maxLength="11"
                android:paddingStart="@dimen/padding_narrow"
                android:paddingEnd="@dimen/padding_narrow" />

            <EditText
                android:id="@+id/editText_email"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edittext_height_regular"
                android:layout_marginTop="@dimen/margin_normal"
                android:background="@drawable/background_edittext_stroked"
                android:drawableEnd="@drawable/ic_mail"
                android:fontFamily="@font/arima_madurai_medium"
                android:hint="@string/email"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:maxLength="100"
                android:paddingStart="@dimen/padding_narrow"
                android:paddingEnd="@dimen/padding_narrow" />

            <EditText
                android:id="@+id/editText_address"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edittext_height_regular"
                android:layout_marginTop="@dimen/margin_normal"
                android:background="@drawable/background_edittext_stroked"
                android:drawableEnd="@drawable/ic_home_address"
                android:fontFamily="@font/arima_madurai_medium"
                android:hint="@string/home_address"
                android:importantForAutofill="no"
                android:inputType="text"
                android:maxLength="250"
                android:maxLines="2"
                android:paddingStart="@dimen/padding_narrow"
                android:paddingEnd="@dimen/padding_narrow" />

            <EditText
                android:id="@+id/editText_nationalId"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edittext_height_regular"
                android:layout_marginTop="@dimen/margin_normal"
                android:background="@drawable/background_edittext_stroked"
                android:drawableEnd="@drawable/ic_national_id"
                android:fontFamily="@font/arima_madurai_medium"
                android:hint="@string/national_id"
                android:importantForAutofill="no"
                android:inputType="numberDecimal"
                android:maxLength="17"
                android:maxLines="2"
                android:paddingStart="@dimen/padding_narrow"
                android:paddingEnd="@dimen/padding_narrow" />

            <Button
                android:id="@+id/button_addMember"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height_regular"
                android:layout_marginTop="@dimen/margin_wide"
                android:background="@drawable/background_button"
                android:fontFamily="@font/arima_madurai_bold"
                android:text="@string/add_member"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/text_medium" />

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>