<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Dialog.AddExpenseDialog">

    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/background_dialog"
        tools:ignore="UselessParent">

        <ImageButton
            android:id="@+id/imageButton_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/margin_text"
            android:layout_marginEnd="@dimen/margin_text"
            android:background="@null"
            android:contentDescription="@string/close"
            android:src="@drawable/ic_close_red" />

        <TextView
            android:id="@+id/textView_headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding_extra_wide"
            android:layout_marginTop="@dimen/padding_extra_wide"
            android:fontFamily="@font/arima_madurai_extrabold"
            android:text="@string/update_expense"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/text_extra_large"
            tools:ignore="RelativeOverlap" />

        <View
            android:id="@+id/view_divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/textView_headline"
            android:layout_marginTop="@dimen/margin_headline"
            android:background="@color/colorBlack" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/view_divider"
            android:orientation="vertical"
            android:padding="@dimen/padding_extra_wide">

            <EditText
                android:id="@+id/editText_rentAmount"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edittext_height_thick"
                android:background="@drawable/background_edittext_stroked"
                android:drawableEnd="@drawable/ic_money"
                android:fontFamily="@font/arima_madurai_medium"
                android:hint="@string/amount"
                android:importantForAutofill="no"
                android:inputType="numberDecimal"
                android:maxLength="6"
                android:paddingStart="@dimen/padding_narrow"
                android:paddingEnd="@dimen/padding_narrow"
                android:textSize="@dimen/text_small" />

            <EditText
                android:id="@+id/editText_rentDate"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edittext_height_thick"
                android:layout_marginTop="@dimen/margin_normal"
                android:background="@drawable/background_edittext_stroked"
                android:drawableEnd="@drawable/ic_monthly_calendar"
                android:fontFamily="@font/arima_madurai_medium"
                android:hint="@string/date"
                android:focusable="false"
                android:inputType="none"
                android:importantForAutofill="no"
                android:paddingStart="@dimen/padding_narrow"
                android:paddingEnd="@dimen/padding_narrow"
                android:textSize="@dimen/text_small"
                tools:ignore="TextFields" />

            <EditText
                android:id="@+id/editText_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_normal"
                android:background="@drawable/background_edittext_stroked"
                android:drawableEnd="@drawable/ic_description"
                android:fontFamily="@font/arima_madurai_medium"
                android:hint="@string/description"
                android:importantForAutofill="no"
                android:inputType="textCapSentences|textMultiLine"
                android:maxHeight="114dp"
                android:maxLength="250"
                android:minHeight="@dimen/edittext_height_thick"
                android:minLines="1"
                android:paddingStart="@dimen/padding_narrow"
                android:paddingEnd="@dimen/padding_narrow"
                android:textSize="@dimen/text_small" />

            <Spinner
                android:id="@+id/spinner_rentCategory"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/margin_normal"
                android:drawSelectorOnTop="true"
                android:entries="@array/rentCategories"
                android:spinnerMode="dropdown" />

            <Button
                android:id="@+id/button_updateRentInfo"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height_regular"
                android:layout_marginTop="@dimen/margin_wide"
                android:background="@drawable/background_button"
                android:fontFamily="@font/arima_madurai_bold"
                android:text="@string/update"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/text_medium" />

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>